--- a/src/com/floreantpos/report/template/ticket-receipt.jrxml
+++ b/src/com/floreantpos/report/template/ticket-receipt.jrxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="TicketReceiptReport" pageWidth="226" pageHeight="340" whenNoDataType="BlankPage" columnWidth="198" leftMargin="14" rightMargin="14" topMargin="5" bottomMargin="5" isFloatColumnFooter="true">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="TicketReceiptReport" pageWidth="226" pageHeight="360" whenNoDataType="BlankPage" columnWidth="198" leftMargin="14" rightMargin="14" topMargin="5" bottomMargin="5" isFloatColumnFooter="true">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="310"/>
+	<property name="ireport.y" value="192"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
@@ -18,8 +18,8 @@
 	<parameter name="headerLine3" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="headerLine4" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="headerLine5" class="java.lang.String" isForPrompting="false"/>
-	<parameter name="grandSubtotal" class="java.lang.String" isForPrompting="false"/>
-	<parameter name="grandTotal" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="subtotalAmount" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="totalAmount" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="taxAmount" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="tipAmount" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="netAmount" class="java.lang.String" isForPrompting="false"/>
@@ -37,7 +37,7 @@
 	<parameter name="taxText" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="serviceChargeText" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="tipsText" class="java.lang.String" isForPrompting="false"/>
-	<parameter name="netAmountText" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="totalAmountText" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="paidAmountText" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="changeAmountText" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="showFooter" class="java.lang.Boolean" isForPrompting="false"/>
@@ -57,6 +57,9 @@
 	<parameter name="barcode" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="adjustAmount" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="adjustAmountText" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="tenderedAmountText" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="tenderedAmount" class="java.lang.String" isForPrompting="false"/>
+	<parameter name="subtotalHeaderText" class="java.lang.String" isForPrompting="false"/>
 	<field name="itemQty" class="java.lang.String"/>
 	<field name="itemName" class="java.lang.String"/>
 	<field name="itemSubtotal" class="java.lang.String"/>
@@ -295,7 +298,7 @@
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
 					<font fontName="Monospaced" size="9" isBold="false" pdfFontName="Helvetica-Bold"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{subTotalText}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{subtotalHeaderText}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement key="textField-16" x="0" y="82" width="198" height="14" isRemoveLineWhenBlank="true"/>
@@ -409,14 +412,14 @@
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
 					<font fontName="Monospaced" size="9"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{totalText}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{subTotalText}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement key="staticText-7" x="32" y="91" width="114" height="13" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
 					<font fontName="Monospaced" size="9"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{netAmountText}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{totalAmountText}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement key="line-2" x="0" y="3" width="198" height="1">
@@ -427,7 +430,9 @@
 				</graphicElement>
 			</line>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-1" x="148" y="132" width="50" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="textField-1" x="148" y="147" width="50" height="13" isRemoveLineWhenBlank="true">
+					<printWhenExpression><![CDATA[$P{dueAmountText}!=null]]></printWhenExpression>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -458,7 +463,7 @@
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Monospaced" size="9"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{grandSubtotal}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{subtotalAmount}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement key="textField" x="148" y="91" width="50" height="13" isRemoveLineWhenBlank="true"/>
@@ -471,7 +476,7 @@
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Monospaced" size="9"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{netAmount}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{totalAmount}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement key="textField" x="148" y="32" width="50" height="13" isRemoveLineWhenBlank="true"/>
@@ -487,7 +492,9 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{taxAmount}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="staticText-9" x="32" y="132" width="114" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="staticText-9" x="32" y="147" width="114" height="13" isRemoveLineWhenBlank="true">
+					<printWhenExpression><![CDATA[$P{dueAmountText}!=null]]></printWhenExpression>
+				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
 					<font fontName="Monospaced" size="9"/>
 				</textElement>
@@ -515,7 +522,7 @@
 				</graphicElement>
 			</line>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField" x="148" y="104" width="50" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="textField" x="148" y="119" width="50" height="13" isRemoveLineWhenBlank="true"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -528,7 +535,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{paidAmount}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="staticText-7" x="32" y="104" width="114" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="staticText-7" x="32" y="119" width="114" height="13" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
 					<font fontName="Monospaced" size="9"/>
 				</textElement>
@@ -579,7 +586,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{discountAmount}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-1" positionType="Float" x="0" y="300" width="198" height="12" isRemoveLineWhenBlank="true">
+				<reportElement key="textField-1" positionType="Float" x="0" y="315" width="198" height="12" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{showFooter}==true]]></printWhenExpression>
 				</reportElement>
 				<box>
@@ -615,7 +622,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{deliveryCharge}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="staticText-9" x="32" y="146" width="114" height="13" isRemoveLineWhenBlank="true">
+				<reportElement key="staticText-9" x="32" y="161" width="114" height="13" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{changedAmount} != null]]></printWhenExpression>
 				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
@@ -624,7 +631,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{changeAmountText}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-1" x="148" y="146" width="50" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="textField-1" x="148" y="161" width="50" height="13" isRemoveLineWhenBlank="true"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -636,7 +643,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{changedAmount}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-1" x="0" y="160" width="198" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="textField-1" x="0" y="175" width="198" height="13" isRemoveLineWhenBlank="true"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -648,7 +655,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{additionalProperties}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="staticText-9" positionType="Float" x="0" y="268" width="198" height="13" isRemoveLineWhenBlank="true">
+				<reportElement key="staticText-9" positionType="Float" x="0" y="283" width="198" height="13" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
 				</reportElement>
 				<textElement textAlignment="Left" verticalAlignment="Middle" markup="html">
@@ -657,7 +664,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{approvalCode}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement positionType="Float" x="50" y="230" width="148" height="36" isRemoveLineWhenBlank="true">
+				<reportElement positionType="Float" x="50" y="245" width="148" height="36" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
 				</reportElement>
 				<box>
@@ -669,7 +676,7 @@
 				<text><![CDATA[Sign:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="staticText-9" positionType="Float" x="0" y="284" width="198" height="13" isRemoveLineWhenBlank="true">
+				<reportElement key="staticText-9" positionType="Float" x="0" y="299" width="198" height="13" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
 				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
@@ -678,7 +685,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{copyType}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement positionType="Float" x="50" y="173" width="148" height="26" isRemoveLineWhenBlank="true">
+				<reportElement positionType="Float" x="50" y="188" width="148" height="26" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
 				</reportElement>
 				<textElement verticalAlignment="Bottom">
@@ -687,12 +694,12 @@
 				<text><![CDATA[Tips:]]></text>
 			</staticText>
 			<line>
-				<reportElement positionType="Float" x="83" y="198" width="115" height="1" isRemoveLineWhenBlank="true">
+				<reportElement positionType="Float" x="83" y="213" width="115" height="1" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
 				</reportElement>
 			</line>
 			<staticText>
-				<reportElement positionType="Float" x="50" y="199" width="148" height="31" isRemoveLineWhenBlank="true">
+				<reportElement positionType="Float" x="50" y="214" width="148" height="31" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
 				</reportElement>
 				<textElement verticalAlignment="Bottom">
@@ -701,19 +708,12 @@
 				<text><![CDATA[Total:]]></text>
 			</staticText>
 			<line>
-				<reportElement positionType="Float" x="83" y="229" width="115" height="1" isRemoveLineWhenBlank="true">
+				<reportElement positionType="Float" x="83" y="244" width="115" height="1" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
 				</reportElement>
 			</line>
-			<staticText>
-				<reportElement positionType="Float" x="0" y="314" width="198" height="14"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[_]]></text>
-			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="staticText-7" x="32" y="118" width="114" height="13" isRemoveLineWhenBlank="true">
+				<reportElement key="staticText-7" x="32" y="133" width="114" height="13" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{adjustAmount}!=null]]></printWhenExpression>
 				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
@@ -722,7 +722,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{adjustAmountText}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField" x="148" y="118" width="50" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="textField" x="148" y="133" width="50" height="13" isRemoveLineWhenBlank="true"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -733,6 +733,26 @@
 					<font fontName="Monospaced" size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{adjustAmount}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement key="textField" x="148" y="105" width="50" height="13" isRemoveLineWhenBlank="true"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="Monospaced" size="9"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{tenderedAmount}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement key="staticText-7" x="32" y="105" width="114" height="13" isRemoveLineWhenBlank="true"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
+					<font fontName="Monospaced" size="9"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{tenderedAmountText}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
