--- a/src/com/floreantpos/report/template/ticket-receipt.jrxml
+++ b/src/com/floreantpos/report/template/ticket-receipt.jrxml
@@ -4,7 +4,7 @@
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="192"/>
+	<property name="ireport.y" value="210"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
@@ -430,7 +430,7 @@
 				</graphicElement>
 			</line>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-1" x="148" y="147" width="50" height="13" isRemoveLineWhenBlank="true">
+				<reportElement key="textField-1" x="148" y="143" width="50" height="13" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{dueAmountText}!=null]]></printWhenExpression>
 				</reportElement>
 				<box>
@@ -492,7 +492,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{taxAmount}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="staticText-9" x="32" y="147" width="114" height="13" isRemoveLineWhenBlank="true">
+				<reportElement key="staticText-9" x="32" y="143" width="114" height="13" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{dueAmountText}!=null]]></printWhenExpression>
 				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
@@ -522,7 +522,7 @@
 				</graphicElement>
 			</line>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField" x="148" y="119" width="50" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="textField" x="148" y="117" width="50" height="13" isRemoveLineWhenBlank="true"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -535,7 +535,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{paidAmount}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="staticText-7" x="32" y="119" width="114" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="staticText-7" x="32" y="117" width="114" height="13" isRemoveLineWhenBlank="true"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
 					<font fontName="Monospaced" size="9"/>
 				</textElement>
@@ -622,7 +622,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{deliveryCharge}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="staticText-9" x="32" y="161" width="114" height="13" isRemoveLineWhenBlank="true">
+				<reportElement key="staticText-9" x="32" y="156" width="114" height="13" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{changedAmount} != null]]></printWhenExpression>
 				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
@@ -631,7 +631,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{changeAmountText}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-1" x="148" y="161" width="50" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="textField-1" x="148" y="156" width="50" height="13" isRemoveLineWhenBlank="true"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -643,7 +643,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{changedAmount}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-1" x="0" y="175" width="198" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="textField-1" x="0" y="169" width="198" height="13" isRemoveLineWhenBlank="true"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -663,18 +663,6 @@
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{approvalCode}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement positionType="Float" x="50" y="245" width="148" height="36" isRemoveLineWhenBlank="true">
-					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
-				</reportElement>
-				<box>
-					<bottomPen lineWidth="1.0" lineStyle="Dashed"/>
-				</box>
-				<textElement verticalAlignment="Bottom">
-					<font fontName="Monospaced" size="9"/>
-				</textElement>
-				<text><![CDATA[Sign:]]></text>
-			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement key="staticText-9" positionType="Float" x="0" y="299" width="198" height="13" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
@@ -694,7 +682,7 @@
 				<text><![CDATA[Tips:]]></text>
 			</staticText>
 			<line>
-				<reportElement positionType="Float" x="83" y="213" width="115" height="1" isRemoveLineWhenBlank="true">
+				<reportElement positionType="Float" x="83" y="212" width="115" height="1" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
 				</reportElement>
 			</line>
@@ -708,12 +696,12 @@
 				<text><![CDATA[Total:]]></text>
 			</staticText>
 			<line>
-				<reportElement positionType="Float" x="83" y="244" width="115" height="1" isRemoveLineWhenBlank="true">
+				<reportElement positionType="Float" x="83" y="242" width="115" height="1" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
 				</reportElement>
 			</line>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="staticText-7" x="32" y="133" width="114" height="13" isRemoveLineWhenBlank="true">
+				<reportElement key="staticText-7" x="32" y="130" width="114" height="13" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$P{adjustAmount}!=null]]></printWhenExpression>
 				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
@@ -722,7 +710,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{adjustAmountText}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField" x="148" y="133" width="50" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="textField" x="148" y="130" width="50" height="13" isRemoveLineWhenBlank="true"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -735,7 +723,9 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{adjustAmount}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField" x="148" y="105" width="50" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="textField" x="148" y="104" width="50" height="13" isRemoveLineWhenBlank="true">
+					<printWhenExpression><![CDATA[$P{tenderedAmount}!=null]]></printWhenExpression>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -748,12 +738,28 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{tenderedAmount}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="staticText-7" x="32" y="105" width="114" height="13" isRemoveLineWhenBlank="true"/>
+				<reportElement key="staticText-7" x="32" y="104" width="114" height="13" isRemoveLineWhenBlank="true">
+					<printWhenExpression><![CDATA[$P{tenderedAmount}!=null]]></printWhenExpression>
+				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
 					<font fontName="Monospaced" size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{tenderedAmountText}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement positionType="Float" x="51" y="245" width="148" height="31" isRemoveLineWhenBlank="true">
+					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
+				</reportElement>
+				<textElement verticalAlignment="Bottom">
+					<font fontName="Monospaced" size="9"/>
+				</textElement>
+				<text><![CDATA[Total:]]></text>
+			</staticText>
+			<line>
+				<reportElement positionType="Float" x="84" y="273" width="115" height="1" isRemoveLineWhenBlank="true">
+					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
+				</reportElement>
+			</line>
 		</band>
 	</summary>
 </jasperReport>
