--- a/src/com/floreantpos/report/template/ticket-receipt.jrxml
+++ b/src/com/floreantpos/report/template/ticket-receipt.jrxml
@@ -4,7 +4,7 @@
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="210"/>
+	<property name="ireport.y" value="258"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
@@ -753,7 +753,7 @@
 				<textElement verticalAlignment="Bottom">
 					<font fontName="Monospaced" size="9"/>
 				</textElement>
-				<text><![CDATA[Total:]]></text>
+				<text><![CDATA[Sign:]]></text>
 			</staticText>
 			<line>
 				<reportElement positionType="Float" x="84" y="273" width="115" height="1" isRemoveLineWhenBlank="true">
